--- a/index.html
+++ b/index.html
@@ -41,7 +41,26 @@
 
 
   <label>Indeks 2</label>
-  <input type="text" id="indeks2">
+<select id="indeks2">
+  <option value="">-- Pilih Indeks 2 --</option>
+  <option value="Sekretariat">Sekretariat</option>
+  <option value="Tata Usaha">Tata Usaha</option>
+  <option value="Keuangan">Keuangan</option>
+  <option value="Program & Berita">Program & Berita</option>
+  <option value="Konten Media Baru">Konten Media Baru</option>
+  <option value="Pengembangan Usaha">Pengembangan Usaha</option>
+  <option value="Teknik Transmisi">Teknik Transmisi</option>
+  <option value="Teknik Studio">Teknik Studio</option>
+  <option value="Umum Bagian SDM">Umum Bagian SDM</option>
+  <option value="Umum Bagian BMN">Umum Bagian BMN</option>
+  <option value="Laporan Kegiatan">Laporan Kegiatan</option>
+<option value="Laporan Bulanan">Laporan Bulanan</option>
+<option value="Laporan Tahunan">Laporan Tahunan</option>
+<option value="Laporan Triwulan">Laporan Triwulan</option>
+<option value="Disposisi Surat Masuk">Disposisi Surat Masuk</option>
+<option value="Disposisi Surat Keluar">Disposisi Surat Keluar</option>
+
+</select>
 
   <label>No Item Arsip</label>
   <input type="text" id="noItem">
@@ -120,5 +139,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
