--- a/index.html
+++ b/index.html
@@ -78,7 +78,20 @@
   <input type="text" id="jumlah">
 
   <label>Unit Pengolah Arsip</label>
-  <input type="text" id="unit">
+<select id="unitPengolah">
+  <option value="">-- Pilih Unit Pengolah Arsip --</option>
+  <option value="Sekretariat">Sekretariat</option>
+  <option value="Tata Usaha">Tata Usaha</option>
+  <option value="Keuangan">Keuangan</option>
+  <option value="Program & Berita">Program & Berita</option>
+  <option value="Konten Media Baru">Konten Media Baru</option>
+  <option value="Pengembangan Usaha">Pengembangan Usaha</option>
+  <option value="Teknik Transmisi">Teknik Transmisi</option>
+  <option value="Teknik Studio">Teknik Studio</option>
+  <option value="Umum Bagian SDM">Umum Bagian SDM</option>
+  <option value="Umum Bagian BMN">Umum Bagian BMN</option>
+</select>
+
 
   <label>Retensi Aktif</label>
   <input type="text" id="retensiAktif">
@@ -139,6 +152,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
