--- a/index.html
+++ b/index.html
@@ -112,7 +112,13 @@
   <input type="text" id="box">
 
   <label>Ruang Simpan</label>
-  <input type="text" id="folder">
+<select id="ruangSimpan">
+  <option value="">-- Pilih Ruang Simpan --</option>
+  <option value="Ruang Kerja">Ruang Kerja</option>
+  <option value="Record Center">Record Center</option>
+  <option value="Ruang Arsip">Ruang Arsip</option>
+</select>
+
 
   <label>Keterangan</label>
 <select id="keterangan">
@@ -157,6 +163,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
