--- a/index.html
+++ b/index.html
@@ -160,9 +160,12 @@
   <tbody id="tabelData"></tbody>
 </table>
 
+  <script src="data.js"></script>
 <script src="script.js"></script>
+
 </body>
 </html>
+
 
 
 
