--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   <input type="number" id="noBerkas" readonly>
 
   <label>Kode Klasifikasi</label>
-  <input type="text" id="kodeKlasifikasi">
+<select id="kodeKlasifikasi">
+  <option value="">-- Pilih Kode Klasifikasi --</option>
+</select>
+
 
   <label>Indeks 1</label>
 <select id="indeks1">
@@ -165,6 +168,7 @@
 
 </body>
 </html>
+
 
 
 
