--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
   <br>
   <button type="submit">Simpan</button>
   <button type="button" id="resetBtn">Reset</button>
+  <button type="button" id="exportCsvBtn">Export CSV</button>
 </form>
 
 <table>
@@ -168,6 +169,7 @@
 
 </body>
 </html>
+
 
 
 
